--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -52,7 +52,7 @@
             <mat-icon>print</mat-icon>
          </button>
          -->
-         <button mat-button mat-icon-button matTooltip="Save current view" [disabled]="elementContexts.length === 0"
+         <button mat-button mat-icon-button matTooltip="Save current view" [disabled]="!elementContexts || elementContexts.length === 0"
             (click)="saveView()">
             <mat-icon>save_alt</mat-icon>
          </button>
@@ -105,9 +105,10 @@
                   <div class="div_title">
                      <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
                         retroTextareaMaxRows="2" (keyup)="context.title = $event.target.value"></textarea>
-                     <mat-icon *ngIf="context.warning" class="mat_icon_warning" [matTooltip]="context.warning">error
-                     </mat-icon>
                   </div>
+                  <button mat-icon-button [matTooltip]="context.warning" color="warn">
+                     <mat-icon>error</mat-icon>
+                  </button>
                   <button class="but_close" mat-icon-button matTooltip="Delete" (click)="removeElement(context)">
                      <mat-icon>delete_forever</mat-icon>
                   </button>
