--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -44,7 +44,7 @@
    </div>
 
    <div #content id="div_content" class="printable">
-      <div #elementContainer class="div_element mat-elevation-z8" *ngFor="let context of elementContexts" mwlResizable 
+      <div #elementContainer class="div_element mat-elevation-z8" *ngFor="let context of elementContexts" mwlResizable
          [enableGhostResize]="true" [resizeEdges]="resizableEdgesOf(context)" [resizeSnapGrid]="{right: 20, bottom: 20}"
          [validateResize]="validateElementResize" (resizeStart)="onResizeStart($event)"
          (resizeEnd)="onResizeEnd(context, $event)">
@@ -73,10 +73,10 @@
                </button>
             </div>
             <div class="div_title">
-               <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()" retroTextareaMaxRows="2"
-                  (keyup)="context.title = $event.target.value"></textarea>               
+               <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
+                  retroTextareaMaxRows="2" (keyup)="context.title = $event.target.value"></textarea>
             </div>
-            <button mat-icon-button [matTooltip]="context.warning" color="warn">
+            <button mat-icon-button *ngIf="context.warning" [matTooltip]="context.warning" color="warn">
                <mat-icon>error</mat-icon>
             </button>
             <button class="but_close" mat-icon-button matTooltip="Delete" (click)="removeElement(context)">
