--- a/src/app/flex-canvas/flex-canvas.component.css
+++ b/src/app/flex-canvas/flex-canvas.component.css
@@ -49,6 +49,10 @@
   border: 1px solid lightgray;
 }
 
+.but_warning {
+  z-index: 1; /* otherwise, it doesn't stay behind sticky header when scrolling */ 
+}
+
 .but_close {
   z-index: 1; /* otherwise, it doesn't stay behind sticky header when scrolling */ 
   opacity: 0.2;  
