--- a/src/app/scenes/scenes.component.html
+++ b/src/app/scenes/scenes.component.html
@@ -4,12 +4,12 @@
   </div>
 
   <h1>Admin / Scenes
-    <button id="but_new_scene" mat-button mat-icon-button matTooltip="Create new scene" [routerLink]="[urlScene]">
-      <mat-icon>add_circle_outline</mat-icon>
+    <button id="but_new_scene" mat-stroked-button matTooltip="Import data (create new scene)" [routerLink]="[urlScene]">
+      <mat-icon>open_in_browser</mat-icon>
+      <span>Import</span>
     </button>
   </h1>
-
-  <div *ngFor="let sceneInfo of sceneInfos">
+  <div class="div_scene" *ngFor="let sceneInfo of sceneInfos">
     <button class="but_delete_scene" mat-button mat-icon-button matTooltip="Delete scene" (click)="delete(sceneInfo)">
       <mat-icon>delete_forever</mat-icon>
     </button>
@@ -19,11 +19,12 @@
     <mat-form-field class="scene_short_desc">
       <input matInput type="text" placeholder="Short Description" readonly [(ngModel)]="sceneInfo.shortDescription">
     </mat-form-field>
-    <mat-form-field class="scene_name">
+    <mat-form-field class="scene_creation_time">
       <input matInput type="text" placeholder="Creation Time" readonly [value]="sceneInfo.creationTime | date:'medium'">
     </mat-form-field>
     <button id="but_continue" mat-button *ngIf="activeSceneId === sceneInfo._id" mat-icon-button
-      matTooltip="Continue with this scene" (click)="leave()">
+      [color]="activeSceneId === sceneInfo._id ? 'primary' : ''" matTooltip="Continue with this scene"
+      (click)="leave()">
       <mat-icon>check_circle</mat-icon>
     </button>
     <button class="but_activate_scene" mat-button *ngIf="activeSceneId !== sceneInfo._id" mat-icon-button
