replace old names and selectors by 'koia'

--- a/src/app/main-toolbar/main-toolbar.component.html
+++ b/src/app/main-toolbar/main-toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-card id="context" *ngIf="showContext">
-  <h3>Retrospective Analysis</h3>
+  <h3>Koia Data Analysis</h3>
   <table *ngIf="scene">
     <tr *ngFor="let contextInfo of scene.context">
       <th>{{contextInfo.name}}</th>
