--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -1,22 +1,22 @@
 <mat-sidenav-container fullscreen>
 
    <mat-sidenav mode="push" class="sidenav" *ngIf="elementContexts">
-      <retro-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="selectedContext" [entries$]="entries$"
+      <koia-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="selectedContext" [entries$]="entries$"
          [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
-         (onElementPositionChange)="changeElementPosition($event)"></retro-chart-side-bar>
-      <retro-graph-side-bar *ngIf="isGraphContext(selectedContext)" [context]="selectedContext" [entries$]="entries$"
+         (onElementPositionChange)="changeElementPosition($event)"></koia-chart-side-bar>
+      <koia-graph-side-bar *ngIf="isGraphContext(selectedContext)" [context]="selectedContext" [entries$]="entries$"
          [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
-         (onElementPositionChange)="changeElementPosition($event)"></retro-graph-side-bar>
-      <retro-summary-table-side-bar *ngIf="isSummaryContext(selectedContext)" [context]="selectedContext"
+         (onElementPositionChange)="changeElementPosition($event)"></koia-graph-side-bar>
+      <koia-summary-table-side-bar *ngIf="isSummaryContext(selectedContext)" [context]="selectedContext"
          [entries$]="entries$" [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
          (onElementPositionChange)="changeElementPosition($event)">
-      </retro-summary-table-side-bar>
+      </koia-summary-table-side-bar>
    </mat-sidenav>
 
    <div #header class="sticky_header">
-      <retro-main-toolbar [route]="route" (onAfterViewChecked)="adjustLayout()"
+      <koia-main-toolbar [route]="route" (onAfterViewChecked)="adjustLayout()"
          (onFilterChange)="onFilterChanged($event)">
-      </retro-main-toolbar>
+      </koia-main-toolbar>
       <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
       <div id="view_toolbar">
          <button mat-button mat-icon-button printSectionId="print-section" ngxPrint matTooltip="Print current view"
@@ -74,7 +74,7 @@
             </div>
             <div class="div_title">
                <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
-                  retroTextareaMaxRows="2" (keyup)="context.title = $event.target.value"></textarea>
+                  koiaTextareaMaxRows="2" (keyup)="context.title = $event.target.value"></textarea>
             </div>
             <button mat-icon-button class="but_warning" *ngIf="context.warning" [matTooltip]="context.warning" color="warn">
                <mat-icon>error</mat-icon>
@@ -85,14 +85,14 @@
          </div>
 
          <div #element>
-            <retro-summary-table *ngIf="isSummaryContext(context)" [context]="context" [entries$]="entries$"
-               (onRemove)="removeElement($event)"></retro-summary-table>
-            <retro-chart *ngIf="isChartContext(context)" [context]="context" [entries$]="entries$"
+            <koia-summary-table *ngIf="isSummaryContext(context)" [context]="context" [entries$]="entries$"
+               (onRemove)="removeElement($event)"></koia-summary-table>
+            <koia-chart *ngIf="isChartContext(context)" [context]="context" [entries$]="entries$"
                [parentConstraintSize]="false" (onRemove)="removeElement($event)" (onWarning)="notifyWarning($event)">
-            </retro-chart>
-            <retro-graph *ngIf="isGraphContext(context)" [context]="context" [entries$]="entries$"
+            </koia-chart>
+            <koia-graph *ngIf="isGraphContext(context)" [context]="context" [entries$]="entries$"
                [parentConstraintSize]="false" (onRemove)="removeElement($event)" (onWarning)="notifyWarning($event)">
-            </retro-graph>
+            </koia-graph>
          </div>
          <img src="./assets/resize-handle.gif" class="resize-handle" mwlResizeHandle
             [resizeEdges]="{bottom: true, right: true}">
