--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,24 +1,24 @@
 <mat-sidenav-container fullscreen>
 
    <mat-sidenav #sidenav mode="push" class="sidenav" *ngIf="elementContexts">
-      <retro-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="selectedContext"
+      <koia-chart-side-bar *ngIf="isChartContext(selectedContext)" [context]="selectedContext"
          [gridColumns]="gridColumns" [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
          (onElementPositionChange)="changeElementPosition($event)">
-      </retro-chart-side-bar>
-      <retro-graph-side-bar *ngIf="isGraphContext(selectedContext)" [context]="selectedContext"
+      </koia-chart-side-bar>
+      <koia-graph-side-bar *ngIf="isGraphContext(selectedContext)" [context]="selectedContext"
          [gridColumns]="gridColumns" [elementCount]="elementContexts.length" [elementPosition]="selectedContextPosition"
          (onElementPositionChange)="changeElementPosition($event)">
-      </retro-graph-side-bar>
-      <retro-summary-table-side-bar *ngIf="isSummaryContext(selectedContext)" [context]="selectedContext"
+      </koia-graph-side-bar>
+      <koia-summary-table-side-bar *ngIf="isSummaryContext(selectedContext)" [context]="selectedContext"
          [gridColumns]="gridColumns" [entries$]="entries$" [elementCount]="elementContexts.length"
          [elementPosition]="selectedContextPosition" (onElementPositionChange)="changeElementPosition($event)">
-      </retro-summary-table-side-bar>
+      </koia-summary-table-side-bar>
    </mat-sidenav>
 
    <div #header class="sticky_header">
-      <retro-main-toolbar [route]="route" (onAfterViewChecked)="adjustLayout()"
+      <koia-main-toolbar [route]="route" (onAfterViewChecked)="adjustLayout()"
          (onFilterChange)="onFilterChanged($event)">
-      </retro-main-toolbar>
+      </koia-main-toolbar>
       <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
       <div id="view_toolbar">
          <button mat-icon-button [matMenuTriggerFor]="moreMenu">
@@ -104,7 +104,7 @@
                   </div>
                   <div class="div_title">
                      <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
-                        retroTextareaMaxRows="2" (keyup)="context.title = $event.target.value"></textarea>
+                        koiaTextareaMaxRows="2" (keyup)="context.title = $event.target.value"></textarea>
                   </div>
                   <button class="but_warning" mat-icon-button *ngIf="context.warning" [matTooltip]="context.warning" color="warn">
                      <mat-icon>error</mat-icon>
@@ -114,16 +114,16 @@
                   </button>
                </div>
                <div class="div_chart">
-                  <retro-summary-table *ngIf="isSummaryContext(context)" [gridView]="true" [context]="context"
-                     [entries$]="entries$" (onRemove)="removeElement($event)"></retro-summary-table>
-                  <retro-chart *ngIf="isChartContext(context)" [context]="context" [entries$]="entries$"
+                  <koia-summary-table *ngIf="isSummaryContext(context)" [gridView]="true" [context]="context"
+                     [entries$]="entries$" (onRemove)="removeElement($event)"></koia-summary-table>
+                  <koia-chart *ngIf="isChartContext(context)" [context]="context" [entries$]="entries$"
                      [parentConstraintSize]="true" (onRemove)="removeElement($event)"
                      (onWarning)="notifyWarning($event)">
-                  </retro-chart>
-                  <retro-graph *ngIf="isGraphContext(context)" [context]="context" [entries$]="entries$"
+                  </koia-chart>
+                  <koia-graph *ngIf="isGraphContext(context)" [context]="context" [entries$]="entries$"
                      [parentConstraintSize]="true" (onRemove)="removeElement($event)"
                      (onWarning)="notifyWarning($event)">
-                  </retro-graph>
+                  </koia-graph>
                </div>
             </div>
          </mat-grid-tile>
