--- a/src/app/main-toolbar/main-toolbar.component.html
+++ b/src/app/main-toolbar/main-toolbar.component.html
@@ -8,37 +8,37 @@
   </table>
 </mat-card>
 
-<div id="div_main">
+<div id="div_main" color="accent">
 
   <div id="div_toolbar">
     <span class="span_buttons" *ngIf="!dialogStyle">
-      <button id="butShowContext" mat-button [color]="showContext ? 'primary' : ''" mat-icon-button
+      <button id="butShowContext" mat-button [color]="showContext ? 'accent' : ''" mat-icon-button
         [matTooltip]="showContext ? 'Hide Context' : 'Show Context'" (click)="showContext = !showContext">
         <mat-icon>help_outline</mat-icon>
       </button>
       &nbsp;&nbsp;&nbsp;
-      <button id="butAdmin" mat-button [color]="currURL == urlScenes ? 'primary' : ''" mat-icon-button
+      <button id="butAdmin" mat-button [color]="currURL == urlScenes ? 'accent' : ''" mat-icon-button
         matTooltip="Administration" [routerLink]="[urlScenes]">
         <mat-icon>account_circle</mat-icon>
       </button>
-      <button id="butRawData" mat-button [color]="currURL == urlRawdata ? 'primary' : ''" mat-icon-button
+      <button id="butRawData" mat-button [color]="currURL == urlRawdata ? 'accent' : ''" mat-icon-button
         matTooltip="Raw Data Table" [routerLink]="[urlRawdata]">
         <mat-icon svgIcon="raw_data_view"></mat-icon>
       </button>
-      <button id="butGridView" mat-button [color]="currURL == urlGrid ? 'primary' : ''" mat-icon-button
+      <button id="butGridView" mat-button [color]="currURL == urlGrid ? 'accent' : ''" mat-icon-button
         matTooltip="Grid View" [routerLink]="[urlGrid]">
         <mat-icon svgIcon="grid_view"></mat-icon>
       </button>
-      <button id="butFlexView" mat-button [color]="currURL == urlFlex ? 'primary' : ''" mat-icon-button
+      <button id="butFlexView" mat-button [color]="currURL == urlFlex ? 'accent' : ''" mat-icon-button
         matTooltip="Flex View" [routerLink]="[urlFlex]">
         <mat-icon svgIcon="flex_view"></mat-icon>
       </button>
-      <button id="butPivotView" mat-button [color]="currURL == urlPivot ? 'primary' : ''" mat-icon-button
+      <button id="butPivotView" mat-button [color]="currURL == urlPivot ? 'accent' : ''" mat-icon-button
         matTooltip="Pivot Table" [routerLink]="[urlPivot]">
         <mat-icon svgIcon="pivot_table"></mat-icon>
       </button>
     </span>
-
+    
     <div id="div_filter">
       <!-- full txt filter together with sort doesn't work with PouchDB, hence we get rid of it for now
       <mat-form-field class="full_text_filter">
@@ -121,7 +121,7 @@
         [matTooltip]="showRangeFilters ? 'Hide value range filters' : 'Show value range filters'"
         (click)="showRangeFilters = !showRangeFilters">
         <mat-icon [matBadge]="rangeFilters.length" matBadgeSize="small"
-          [matBadgeColor]="showRangeFilters ? 'primary' : 'accent'">swap_horiz</mat-icon>
+          [matBadgeColor]="showRangeFilters ? 'accent' : 'accent'">swap_horiz</mat-icon>
       </button>
 
       <button mat-button (click)="refreshEntries()" mat-icon-button matTooltip="Refresh data">
@@ -133,9 +133,9 @@
   <div *ngIf="showRangeFilters">
     <div *ngFor="let rangeFilter of rangeFilters">
       <div class="div_range_slider">
-        <button mat-button color="primary" mat-icon-button matTooltip="Define slider step size"
+        <button mat-button color="accent" mat-icon-button matTooltip="Define slider step size"
           [matMenuTriggerFor]="stepmenu">
-          <mat-icon [matBadge]="rangeFilter.selectedStepAbbrev" matBadgePosition="below" matBadgeColor="primary">
+          <mat-icon [matBadge]="rangeFilter.selectedStepAbbrev" matBadgePosition="below" matBadgeColor="accent">
             linear_scale
           </mat-icon>
         </button>
@@ -148,7 +148,7 @@
         &nbsp;&nbsp;
         <ng5-slider [(value)]="rangeFilter.selStart" [(highValue)]="rangeFilter.selEnd"
           [options]="rangeFilter.rangeOptions" (userChangeEnd)="refreshEntries()"></ng5-slider>
-        <button class="but_reset_range_filter" mat-button color="primary" mat-icon-button
+        <button class="but_reset_range_filter" mat-button color="accent" mat-icon-button
           matTooltip="Reset value range filter" [disabled]="!rangeFilter.isFiltered()"
           (click)="resetRangeFilter(rangeFilter)">
           <mat-icon>undo</mat-icon>
