--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 html { 
   background-color: #292626; 
@@ -22,13 +21,17 @@ body {
   right: 15; /* otherwise vertical scrollbar remains inactive in header */ 
   width: calc(100% - 15px); 
   z-index: 999;
-  border-bottom: 1px solid rgb(145, 144, 144);  
+  border-bottom: 1px solid 	
+  	
+rgb(244,54,45);  
 }
 
 #view_toolbar {
-  background-color: rgb(202, 201, 201);  
+  background-color: 	
+  rgb(255,111,88);  
   width: 100%;
-  border-top: 1px solid rgb(145, 144, 144);    
+  border-top: 1px solid 	
+  rgb(255,111,88);    
 }
 
 .sidenav {
